# iconery

./: .env.example  .gitignore  Cargo.toml  config.json.example  flake.nix
api/: Cargo.toml
api/src/: main.rs
migrations/: 20250911204547_create_tables.sql  20250911204547_main.sql
src/: customer.rs  error.rs  main.rs  order.rs  product.rs  util.rs
